<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    tools:context=".authentication.SignUpFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signUpFragmentToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_arrow"
        app:title="Create an account"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="330dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpFragmentToolbar">

        <TextView
            android:id="@+id/nameTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/white50"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/signUpFragmentNameET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/white20"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/phoneNumberTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/white50"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signUpFragmentPhoneNumberTV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/_91_1234567890"
            android:textColor="@color/white50"
            android:textColorHint="@color/white20"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/right_icon"
            tools:ignore="Autofill,TextFields" />

        <TextView
            android:id="@+id/emailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/white50"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/signUpFragmentEmailET"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white20"
            android:textSize="16sp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/dobTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textColor="@color/white50"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signUpFragmentDOBTV"
            style="@android:style/Widget.Holo.Spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_your_dob"
            android:textColor="@color/white"
            android:textColorHint="@color/white20"
            android:textSize="16sp"
            tools:ignore="Autofill" />

    </LinearLayout>

    <TextView
        android:id="@+id/verifyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:justificationMode="inter_word"
        android:maxWidth="300dp"
        android:text="@string/to_ensure_customer_security_please_verify_your_email_to_create_your_account"
        android:textColor="@color/white50"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/signUpFragmentNextButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpFragmentNextButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_shape_design"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3" />

    <ProgressBar
        android:id="@+id/signUpActivityProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/signUpFragmentNextButton"
        app:layout_constraintEnd_toEndOf="@+id/signUpFragmentNextButton"
        app:layout_constraintStart_toStartOf="@+id/signUpFragmentNextButton"
        app:layout_constraintTop_toTopOf="@+id/signUpFragmentNextButton" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/signUpFragmentSignInTV"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="@color/red"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>