<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.ForgetPasswordOtpFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/an_authentication_code_has_been_sent_to"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/forgetPasswordOtpFragmentEmailTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="3dp"
            android:fontFamily="@font/roboto_medium"
            android:text="example@gmail.com"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:background="@drawable/otp_image"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


    <EditText
        android:id="@+id/forgetPasswordOtpFragmentOtpET"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/otp_edittext_shape_design"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:hint="Enter your OTP"
        android:inputType="number"
        android:maxLength="6"
        android:paddingStart="12dp"
        android:paddingTop="6dp"
        android:paddingEnd="12dp"
        android:paddingBottom="6dp"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/forgetPasswordOtpFragmentVerifyButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:background="@drawable/button_shape_design"
        android:elevation="15dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/verify"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/forgetPasswordOtpFragmentPB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/themeColor"
        app:layout_constraintBottom_toBottomOf="@+id/forgetPasswordOtpFragmentVerifyButton"
        app:layout_constraintEnd_toEndOf="@+id/forgetPasswordOtpFragmentVerifyButton"
        app:layout_constraintStart_toStartOf="@+id/forgetPasswordOtpFragmentVerifyButton"
        app:layout_constraintTop_toTopOf="@+id/forgetPasswordOtpFragmentVerifyButton" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/forgetPasswordOtpFragmentVerifyButton">

        <TextView
            android:id="@+id/resendOTPTV"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/resend_otp"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>